# langfuse-junit-exporter

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: models.py  reporting.py
tests/: test_models.py  test_reporting.py
tests/snapshots/test_reporting/junit_report/: junit_report_empty.xml  junit_report_failure.xml  junit_report_multiple_items.xml  junit_report_success.xml
tests/snapshots/test_reporting/text_report/: text_report_empty.txt  text_report_multiple_items.txt  text_report_no_scores.txt  text_report_success.txt
